--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -15,7 +15,7 @@ html(lang=lang dir=lang_dir)
     link(rel="shortcut icon" href="/img/favicon.png")
 
   body
-    nav.top-bar(data-topbar)
+    nav.top-bar(role="navigation" data-topbar)
       ul.title-area
         li.name
           h1
