--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -1,6 +1,6 @@
 doctype html
 
-html(lang=lang dir=lang_dir)
+html(lang=lang dir=lang_dir locale=locale)
   head
     meta(charset="utf-8")
     title= title
