Let people handle settings themselves

--- a/client/scss/styles.scss
+++ b/client/scss/styles.scss
@@ -1,7 +1,9 @@
 @charset "UTF-8";
+// foundation helper functions
+@import "foundation/functions";
 
 // our variables
-@import "settings";
+// - goes here
 
 // normalize lib
 @import "normalize";
