--- a/server/views/react.jade
+++ b/server/views/react.jade
@@ -17,7 +17,4 @@ html(lang=lang dir=lang_dir data-locale=locale)
     section#main!= html
 
     script(src="/js/common.js?"+stamp)
-    script(src="/js/"+react_page+".js?"+stamp)
-
-    script.
-      React.render(React.createElement(s7nPage, !{data||'null'}), document.getElementById('main'));
+    script(src="/js/"+page+".js?"+stamp)
