--- a/server/views/react.jade
+++ b/server/views/react.jade
@@ -14,4 +14,5 @@ html(lang=lang dir=lang_dir data-locale=locale)
     section#main!= html
 
     script(src="/js/common.js?"+stamp)
+    script(src="/js/" + lang + "/messages.js?" + stamp)
     script(src="/js/"+page+".js?"+stamp)
