--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -1,9 +1,7 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700);
 @import url(https://fonts.googleapis.com/css?family=Droid+Serif:300,400,500,700);
 
-@import 'variables';
-@import 'bootstrap';
-@import 'paper';
+@import 'normalize';
 @import 'font-awesome';
 
 // our stuff
